Shannon fixed alignment on output

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -8,6 +8,11 @@ body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+h1 {
+    display: inline-block;
+}
+
+
 .hero-spacer {
     margin-top: 50px;
 }
